--- a/sass/_plantillaproyectos.scss
+++ b/sass/_plantillaproyectos.scss
@@ -7,7 +7,6 @@
         display: flex;
         height: 90vh;
         flex-direction: row;
-        border-top: 1px solid #000000;
         border-bottom: 1px solid #0c0c0c;
 
         .colum_uno {
@@ -21,7 +20,7 @@
             .titulo {
                 color: #000;
                 font-family: monaextrabold;
-                font-size: 75px;
+                font-size: 4vw;
                 font-style: normal;
                 font-weight: 900;
                 line-height: 136%;
@@ -69,8 +68,9 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            overflow: hidden;
             .imgres{
-                width: 65%;
+                width: 50%;
             }
         }
 
@@ -88,6 +88,7 @@
         height: 50px;
         overflow-x: hidden;
 
+
         .slider_inicio {
             width: 100%;
             position: absolute;
@@ -96,7 +97,7 @@
             align-items: start;
             flex-shrink: 0;
             overflow: hidden;
-            background: #ffffff;
+            background: #f32400;
 
             .slide-track {
                 width: 100%;
@@ -118,9 +119,9 @@
                     p {
                         padding-top: 10px;
                         padding-bottom: 10px;
-                        color: #000;
+                        color: #ffffff;
                         text-align: center;
-                        font-family: MargoBeuys;
+                        font-family: monasemibold;
                         font-size: 15px;
                         font-style: normal;
                         font-weight: 300;
@@ -133,7 +134,7 @@
     }
 
     .cont_grilla_proyectos {
-        margin: 2em 4em 10em 4em;
+        border-top: #000 1px solid;
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(min(300px, 100%), 1fr));
         gap: 2em;
@@ -189,13 +190,124 @@
         }
     }
     .cont_ilustracion_error{
+        border-top: #000 solid 1px;
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-top: 10vh;
+        padding-top: 10vh;
         margin-bottom: 10vh;
         margin-left: 1em;
         margin-right: 1em;
+    }
+
+    .pie_de_pagina {
+        border-top: #000 solid 1px;
+        position: relative;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        overflow: hidden;
+
+        .cont_barra_links_pie {
+            display: flex;
+            flex-direction: row;
+            border-bottom: #000000 solid 1px;
+            height: 25vh;
+            align-items: center;
+            justify-content: space-around;
+            padding-left: 2em;
+            padding-right: 2em;
+
+
+            .item_pie {
+                margin-left: 1em;
+                flex-direction: column;
+                display: flex;
+                justify-content: center;
+                width: 100%;
+                height: 100%;
+                border-right: #000000 solid 1px;
+
+                h6 {
+                    font-family: monalight;
+                    font-size: 15px;
+                    font-weight: 200;
+                    font-stretch: normal;
+                    font-style: normal;
+                    line-height: normal;
+                    letter-spacing: normal;
+                    text-align: left;
+                    color: #000;
+                }
+
+                p {
+                    font-family: monamedium;
+                    font-size: 18px;
+                    font-weight: normal;
+                    font-stretch: normal;
+                    font-style: normal;
+                    line-height: normal;
+                    letter-spacing: normal;
+                    text-align: left;
+                    color: #000;
+                }
+
+
+            }
+        }
+
+        .cont_barra_dos_links_pie {
+            display: flex;
+            flex-direction: row;
+            border-bottom: #000000 solid 1px;
+            height: 25vh;
+            align-items: center;
+            justify-content: space-around;
+            padding-left: 2em;
+            padding-right: 2em;
+
+            .item_pie {
+                padding-left: 2em;
+                margin-left: 1em;
+                flex-direction: column;
+                display: flex;
+                justify-content: center;
+                width: 100%;
+                height: 100%;
+                border-right: #000000 solid 1px;
+                border-left: #000000 solid 1px;
+
+                p {
+                    font-family: monamedium;
+                    font-size: 40px;
+                    font-weight: normal;
+                    font-stretch: normal;
+                    font-style: normal;
+                    line-height: normal;
+                    letter-spacing: normal;
+                    text-align: left;
+                    color: #000;
+
+                    a {
+                        strong {
+                            color: #000;
+                            text-decoration: underline;
+                        }
+                    }
+
+
+                }
+
+
+            }
+        }
+
+        img {
+            width: 100%;
+            position: absolute;
+            bottom: -10%;
+        }
+
     }
 
 }
@@ -375,6 +487,108 @@
                 width: 80vw;
             }
         }
+        .pie_de_pagina {
+            position: relative;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            overflow: hidden;
+
+            .cont_barra_links_pie {
+                display: flex;
+                flex-direction: column;
+                height: 50vh;
+                align-items: center;
+                justify-content: space-around;
+                padding-left: 1em;
+                padding-right: 1em;
+
+                .item_pie {
+                    border-bottom: #000000 solid 1px;
+                    border-left: #000000 solid 1px;
+                    padding-left: 2em;
+                    margin-left: 0em;
+                    margin-right: 0em;
+                    flex-direction: column;
+                    display: flex;
+                    justify-content: center;
+                    width: 100%;
+                    height: 100%;
+                    border-right: #000000 solid 1px;
+
+                    h6 {
+                        font-family: monalight;
+                        font-size: 15px;
+                        font-weight: 200;
+                        font-stretch: normal;
+                        font-style: normal;
+                        line-height: normal;
+                        letter-spacing: normal;
+                        text-align: left;
+                        color: #000;
+                    }
+
+                    p {
+                        font-family: monamedium;
+                        font-size: 18px;
+                        font-weight: normal;
+                        font-stretch: normal;
+                        font-style: normal;
+                        line-height: normal;
+                        letter-spacing: normal;
+                        text-align: left;
+                        color: #000;
+                    }
+
+
+                }
+            }
+
+            .cont_barra_dos_links_pie {
+                display: flex;
+                flex-direction: row;
+                border-bottom: #000000 solid 1px;
+                height: 30vh;
+                align-items: center;
+                justify-content: space-around;
+                padding-left: 0em;
+                padding-right: 1em;
+
+                .item_pie {
+                    padding-left: 0em;
+                    padding-right: 0em;
+                    flex-direction: column;
+                    display: flex;
+                    justify-content: center;
+                    width: 100%;
+                    height: 100%;
+                    border-right: #000000 solid 1px;
+                    border-left: #000000 solid 1px;
+
+                    p {
+                        font-family: monamedium;
+                        font-size: 30px;
+                        font-weight: normal;
+                        font-stretch: normal;
+                        font-style: normal;
+                        line-height: normal;
+                        letter-spacing: normal;
+                        text-align: center;
+                        color: #000;
+                    }
+
+
+                }
+            }
+
+            img {
+                width: 100%;
+                position: absolute;
+                bottom: 0%;
+            }
+
+        }
+
     }
 
 }
