--- a/sass/_proyecto.scss
+++ b/sass/_proyecto.scss
@@ -1,304 +1,8 @@
 .body_proyecto {
 
-    .conte__menui_web {
-        display: flex;
-        width: 100%;
-        margin: 0;
-        border-bottom: 1px solid black;
-
-        .header__index {
-            height: 10vh;
-            margin: 0em 1em 0em 1em;
-            display: flex;
-            width: 100%;
-            justify-content: space-between;
-            justify-items: center;
-            align-items: center;
-            overflow: hidden;
-
-            .cont__logo__nav {
-                transform: scale(0.9) translateY(0px);
-                z-index: 1000;
-                filter: invert(100%);
-            }
-
-            .icono-menu {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                transform: scale(0.8) translateY(0px);
-                z-index: 1000;
-                margin-right: 9px;
-
-                .bars__menu {
-                    width: 10px;
-                    height: 10px;
-                    position: relative;
-                    top: 0%;
-                    left: 0%;
-                    transform: translate(-50%, -50%) scale(4);
-
-                    span {
-                        display: block;
-                        width: 100%;
-                        height: 1px;
-                        background: #000000;
-                        margin-top: 2px;
-                        transform-origin: 0px 100%;
-                        transition: all 800ms;
-                        transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.59);
-                    }
-                }
-
-                .activeline1__bars-menu {
-                    transform: rotate(45deg) translate(0px, -1px);
-                }
-
-                .activeline2__bars-menu {
-                    opacity: 0;
-                    margin-left: -55vh;
-                    transform: scale(1);
-                }
-
-                .activeline3__bars-menu {
-                    transform: rotate(-45deg) translate(0.8px, 1px);
-                }
-            }
-        }
-
-        .contendor_activo_de_menu {
-            border-left: #000 1px solid;
-            padding-top: 10vh;
-            display: flex;
-            right: -100vw;
-            top: 0px;
-            width: 100%;
-            height: 100vh;
-            position: fixed;
-            z-index: 9;
-            background: #fff;
-            transform-origin: 0px 0%;
-            transition: all 900ms;
-            transition-delay: 0.1s;
-            transition-timing-function: cubic-bezier(0.51, 1.02, 1, 1);
-
-            .list_menu {
-                height: 80vh;
-                border-top: 1px solid black;
-                width: 100%;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: space-between;
-
-
-                .lista_uno {
-                    height: 70%;
-                    padding-left: 0;
-                    width: 100%;
-                    margin-bottom: 0px;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: space-between;
-
-                    .cont_opcion_lista {
-                        border-bottom: #000 1px solid;
-                        width: 100%;
-                        display: flex;
-                        flex-direction: row;
-                        align-items: center;
-                        justify-content: space-between;
-                        overflow: hidden;
-                        height: 100%;
-                        
-
-
-                        a {
-                            margin-left: 0.3em;
-                            transition: all 900ms;
-                            transition-delay: 0.3s;
-                            transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1);
-                            transform: translateY(200%);
-                            width: 100%;
-                            padding: 5px 0px;
-                            align-items: center;
-                            display: flex;
-                            flex-direction: row;
-                            justify-content: space-between;
-                            color: #111111;
-                            font-family: monalight;
-                            font-size: 7vw;
-                            font-style: normal;
-                            font-weight: 100;
-                            line-height: 107.5%;
-
-                            p {
-                                margin-right: 0.3em;
-                                color: #989898;
-                                font-family: monalight;
-                                font-size: 5vw;
-                                font-style: normal;
-                                font-weight: 300;
-                                line-height: 107.5%;
-                            }
-                        }
-                    }
-
-                }
-
-                .boton_contactar{
-                    width: 100%;
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: center;
-                    align-items: flex-start;
-                    gap: 10px;
-                    padding: 20px 80px;
-                    background-color: #f32400;
-                    font-family: monabold;
-                    font-size: 20px;
-                    font-weight: 600;
-                    font-stretch: normal;
-                    font-style: normal;
-                    line-height: 1;
-                    letter-spacing: normal;
-                    text-align: left;
-                    color: #fff;
-                }
-
-                .list_social {
-                    height: 10%;
-                    display: flex;
-                    overflow-y: hidden;
-
-                    a {  
-                        height: 100%;  
-                        transform: translateY(100%);                    margin-left: 1em;
-                        margin-right: 1em;
-                        text-align: center;
-                        color: #263238;
-                        font-family: monaregular;
-                        font-size: 18px;
-                        font-style: normal;
-                        font-weight: 300;
-                    }
-
-
-
-                }
-            }
-        }
-
-        .contendor_activo_de_menu_op {
-            border-left: #000 1px solid;
-            padding-top: 10vh;
-            display: flex;
-            right: 0px;
-            top: 0px;
-            width: 100vw;
-            height: 100vh;
-            position: absolute;
-            z-index: 9;
-            background: #ffffff;
-
-
-            .list_menu {
-                height: 90vh;
-                border-top: 1px solid black;
-                width: 100%;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: space-between;
-
-                .lista_uno {
-                    height: 70%;
-                    padding-left: 0;
-                    width: 100%;
-                    margin-bottom: 0px;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: space-between;
-
-                    .cont_opcion_lista {
-                        border-bottom: #000 1px solid;
-                        width: 100%;
-                        display: flex;
-                        flex-direction: row;
-                        align-items: center;
-                        justify-content: space-between;
-                        overflow: hidden;
-                        height: 100%;
-
-                        a {
-                            transform: translateY(0%);
-                            width: 100%;
-                            align-items: center;
-                            display: flex;
-                            flex-direction: row;
-                            justify-content: space-between;
-                            color: #000000;
-                            font-family: monalight;
-                            font-size: 4vw;
-                            font-style: normal;
-                            font-weight: 100;
-                            line-height: 107.5%;
-
-                            p {
-                                color: #989898;
-                                font-family: monalight;
-                                font-size: 4vw;
-                                font-style: normal;
-                                font-weight: 300;
-                                line-height: 107.5%;
-                            }
-                        }
-                    }
-                }
-
-                .boton_contactar{
-                    width: 100%;
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: center;
-                    align-items: flex-start;
-                    gap: 10px;
-                    padding: 20px 80px;
-                    background-color: #f32400;
-                    font-family: monabold;
-                    font-size: 20px;
-                    font-weight: 600;
-                    font-stretch: normal;
-                    font-style: normal;
-                    line-height: 1;
-                    letter-spacing: normal;
-                    text-align: left;
-                    color: #fff;
-                }
-
-                .list_social {
-                    display: flex;
-
-                    a {   
-                        transform: translateY(0%);                      margin-left: 1em;
-                        margin-right: 1em;
-                        text-align: center;
-                        color: #263238;
-                        font-family: monaregular;
-                        font-size: 18px;
-                        font-style: normal;
-                        font-weight: 300;
-                    }
-
-
-
-                }
-            }
-        }
-    }
     .cont_inicios {
-        margin-left: 5em;
-        margin-right: 5em;
+        margin-left: 1em;
+        margin-right: 1em;
 
         height: 90vh;
         display: flex;
@@ -713,9 +417,9 @@
         display: flex;
         flex-direction: column;
         margin-top: 10em;
-        margin-bottom: 10em;
+        padding-bottom: 10em;
         gap: 0.7em;
-
+        border-bottom: #000 solid 1px;
         .cont_img_grup {
             display: flex;
             flex-direction: row;
