--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -509,140 +509,113 @@ p {
 }
 
 /* ##################### PIE ############################# */
-.cont_pie_de_pagina {
-  display: flex;
-  background: #171717;
-  padding: 15em 5em 5em 5em;
-  flex-direction: column;
+.pie_de_pagina {
   position: relative;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
   overflow: hidden;
-  gap: 5em;
 
-  .cont_titulo_pie {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-
-    h2 {
-      color: #fff;
-      font-family: Sora;
-      font-size: calc(1px + 6vw);
-      font-style: normal;
-      font-weight: 700;
-      line-height: 136%;
-      text-transform: capitalize;
-
-      strong {
-        color: rgb(255, 230, 0);
-        font-family: "Playfair Display", serif;
-        font-size: calc(1px + 6vw);
-        font-style: italic;
-        font-weight: 700;
-        line-height: 136%;
-        text-transform: uppercase;
-      }
-    }
-
-    .animacionpie {
-      width: 60vw;
-      z-index: 2;
+  .cont_barra_links_pie {
       display: flex;
-      justify-content: center;
+      flex-direction: row;
+      border-bottom: #000000 solid 1px;
+      height: 25vh;
       align-items: center;
-      position: relative;
+      justify-content: space-around;
+      padding-left: 2em;
+      padding-right: 2em;
 
-      .caritapie {
-        width: 80%;
-        position: absolute;
-        z-index: 5;
-      }
 
-      .palabrapie {
-        animation-name: backfloat;
-        animation-duration: 20s;
-        animation-iteration-count: infinite;
-        animation-timing-function: linear;
-        width: 100%;
-        position: absolute;
-        z-index: 4;
+      .item_pie {
+          margin-left: 1em;
+          flex-direction: column;
+          display: flex;
+          justify-content: center;
+          width: 100%;
+          height: 100%;
+          border-right: #000000 solid 1px;
+
+          h6 {
+              font-family: monalight;
+              font-size: 15px;
+              font-weight: 200;
+              font-stretch: normal;
+              font-style: normal;
+              line-height: normal;
+              letter-spacing: normal;
+              text-align: left;
+              color: #000;
+          }
+
+          p {
+              font-family: monamedium;
+              font-size: 18px;
+              font-weight: normal;
+              font-stretch: normal;
+              font-style: normal;
+              line-height: normal;
+              letter-spacing: normal;
+              text-align: left;
+              color: #000;
+          }
+
+
       }
-    }
   }
 
-  .list_social {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-
-    .cont_uno {
-      .titulo_list_social {
-        color: #ffffff;
-        font-family: Sora;
-        font-size: 18px;
-        font-style: normal;
-        font-weight: 250;
-        line-height: 107.5%;
-        margin-bottom: 20px;
-      }
-
-      ul {
-        display: flex;
-        flex-direction: row;
-        gap: 1em;
-
-        a {
-          color: #ffffff;
-          font-family: Sora;
-          font-size: 18px;
-          font-style: normal;
-          font-weight: 300;
-          line-height: 107.5%;
-          /* 19.35px */
-        }
-      }
-    }
-
-    .cont_dos {
+  .cont_barra_dos_links_pie {
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
+      border-bottom: #000000 solid 1px;
+      height: 25vh;
+      align-items: center;
+      justify-content: space-around;
+      padding-left: 2em;
+      padding-right: 2em;
 
-      p {
-        color: #ffffff;
-        font-family: Sora;
-        font-size: 18px;
-        font-style: normal;
-        font-weight: 250;
-        line-height: 107.5%;
-        margin-bottom: 20px;
-      }
+      .item_pie {
+          padding-left: 2em;
+          margin-left: 1em;
+          flex-direction: column;
+          display: flex;
+          justify-content: center;
+          width: 100%;
+          height: 100%;
+          border-right: #000000 solid 1px;
+          border-left: #000000 solid 1px;
 
-      h5 {
-        color: #ffffff;
-        font-family: Sora;
-        font-size: 15px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 107.5%;
-        display: flex;
-        padding: 0px 5px 5px 0px;
-        align-items: center;
-        align-self: stretch;
-        border-bottom: 0.5px solid #ffffff;
+          p {
+              font-family: monamedium;
+              font-size: 40px;
+              font-weight: normal;
+              font-stretch: normal;
+              font-style: normal;
+              line-height: normal;
+              letter-spacing: normal;
+              text-align: left;
+              color: #000;
+
+              a {
+                  strong {
+                      color: #000;
+                      text-decoration: underline;
+                  }
+              }
+
+
+          }
+
+
       }
-    }
   }
 
-  .grillapie {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 0;
-    width: calc(1px + 100vw);
-    margin-left: 10em;
+  img {
+      width: 100%;
+      position: absolute;
+      bottom: -10%;
   }
+
 }
 
 @media (max-width: 1000px) {
@@ -1072,162 +1045,107 @@ p {
       }
     }
   }
-
-  .cont_pie_de_pagina {
-    display: flex;
-    background: #171717;
-    padding: 1em 1em 1em 1em;
-    flex-direction: column;
-    justify-content: end;
-    position: none;
-    overflow: hidden;
-    gap: 0em;
+  .pie_de_pagina {
+    position: relative;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
 
-    .cont_titulo_pie {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      width: 100%;
-      position: relative;
-      height: 100%;
-
-      h2 {
-
-        text-align: center;
-        padding: 10em 1em 1em 1em;
-        color: #fff;
-        font-family: Sora;
-        font-size: calc(1px + 8vw);
-        font-style: normal;
-        font-weight: 700;
-        line-height: 136%;
-        text-transform: capitalize;
-
-        strong {
-          color: rgb(255, 230, 0);
-          font-family: "Playfair Display", serif;
-          font-size: calc(1px + 7vw);
-          font-style: italic;
-          font-weight: 700;
-          line-height: 136%;
-          text-transform: uppercase;
-        }
-      }
-
-      .animacionpie {
-        top: 7em;
-        left: 0em;
-        width: 40vw;
-        z-index: 2;
+    .cont_barra_links_pie {
         display: flex;
-        justify-content: center;
+        flex-direction: column;
+        height: 50vh;
         align-items: center;
+        justify-content: space-around;
+        padding-left: 1em;
+        padding-right: 1em;
+
+        .item_pie {
+            border-bottom: #000000 solid 1px;
+            border-left: #000000 solid 1px;
+            padding-left: 2em;
+            margin-left: 0em;
+            margin-right: 0em;
+            flex-direction: column;
+            display: flex;
+            justify-content: center;
+            width: 100%;
+            height: 100%;
+            border-right: #000000 solid 1px;
+
+            h6 {
+                font-family: monalight;
+                font-size: 15px;
+                font-weight: 200;
+                font-stretch: normal;
+                font-style: normal;
+                line-height: normal;
+                letter-spacing: normal;
+                text-align: left;
+                color: #000;
+            }
+
+            p {
+                font-family: monamedium;
+                font-size: 18px;
+                font-weight: normal;
+                font-stretch: normal;
+                font-style: normal;
+                line-height: normal;
+                letter-spacing: normal;
+                text-align: left;
+                color: #000;
+            }
+
+
+        }
+    }
+
+    .cont_barra_dos_links_pie {
+        display: flex;
+        flex-direction: row;
+        border-bottom: #000000 solid 1px;
+        height: 30vh;
+        align-items: center;
+        justify-content: space-around;
+        padding-left: 0em;
+        padding-right: 1em;
+
+        .item_pie {
+            padding-left: 0em;
+            padding-right: 0em;
+            flex-direction: column;
+            display: flex;
+            justify-content: center;
+            width: 100%;
+            height: 100%;
+            border-right: #000000 solid 1px;
+            border-left: #000000 solid 1px;
+
+            p {
+                font-family: monamedium;
+                font-size: 30px;
+                font-weight: normal;
+                font-stretch: normal;
+                font-style: normal;
+                line-height: normal;
+                letter-spacing: normal;
+                text-align: center;
+                color: #000;
+            }
+
+
+        }
+    }
+
+    img {
+        width: 100%;
         position: absolute;
-        flex-direction: column-reverse;
-
-        .caritapie {
-          width: 87%;
-          position: absolute;
-          z-index: 5;
-        }
-
-        .palabrapie {
-          animation-name: backfloat;
-          animation-duration: 20s;
-          animation-iteration-count: infinite;
-          animation-timing-function: linear;
-          width: 100%;
-          position: absolute;
-          z-index: 4;
-        }
-      }
+        bottom: 0%;
     }
 
-    .list_social {
-      z-index: 500;
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
-      gap: 5em;
-
-      .cont_uno {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-
-        .titulo_list_social {
-          color: #ffffff;
-          font-family: Sora;
-          font-size: 18px;
-          font-style: normal;
-          font-weight: 250;
-          line-height: 107.5%;
-          margin-bottom: 20px;
-        }
-
-        ul {
-          display: flex;
-          flex-direction: row;
-          gap: 1em;
-
-          a {
-            color: #ffffff;
-            font-family: Sora;
-            font-size: calc(1px + 3.7vw);
-            font-style: normal;
-            font-weight: 300;
-            line-height: 107.5%;
-            /* 19.35px */
-          }
-        }
-      }
-
-      .cont_dos {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-
-        p {
-          color: #ffffff;
-          font-family: Sora;
-          font-size: 18px;
-          font-style: normal;
-          font-weight: 250;
-          line-height: 107.5%;
-          margin-bottom: 20px;
-        }
-
-        h5 {
-          color: #ffffff;
-          font-family: Sora;
-          font-size: 15px;
-          font-style: normal;
-          font-weight: 500;
-          line-height: 107.5%;
-          display: flex;
-          padding: 0px 5px 5px 0px;
-          align-items: center;
-          align-self: stretch;
-          border-bottom: 0.5px solid #ffffff;
-        }
-      }
-    }
-
-    .grillapie {
-      position: none;
-      top: 0;
-      left: 0;
-      z-index: 0;
-      width: calc(1px + 300vw);
-      margin-left: 0;
-      filter: opacity(10%);
-    }
-  }
+}
 }
 
 .Words {
