--- a/sass/_plantillaproyectos.scss
+++ b/sass/_plantillaproyectos.scss
@@ -83,6 +83,7 @@
     }
 
     .cont_cinta_plantilla {
+
         position: relative;
         width: 100%;
         height: 50px;
@@ -134,12 +135,15 @@
     }
 
     .cont_grilla_proyectos {
+        padding: 1em 1em 1em 1em;
+        border-bottom: solid 1px black;
         border-top: #000 1px solid;
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(min(300px, 100%), 1fr));
-        gap: 2em;
+        grid-template-columns: repeat(auto-fit, minmax(min(400px, 100%), 1fr));
+        gap: 1em;
 
         .cont_proyectos {
+            border: solid 1px black;
             width: 100%;
             display: flex;
             flex-direction: column;
@@ -147,17 +151,18 @@
             img {
                 width: 100%;
                 object-fit: cover;
+
             }
 
             .cont_pie_proyecto {
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
-                margin-top: 10px;
+                margin: 1em 1em 1em 1em;
 
                 p {
                     color: #000;
-                    font-family: Margo + Beuys;
+                    font-family: monasemibold;
                     font-size: 15px;
                     font-style: normal;
                     font-weight: 900;
@@ -176,7 +181,7 @@
 
                     p {
                         color: #000;
-                        font-family: Margo + Beuys;
+                        font-family: monasemibold;
                         font-size: 10px;
                         font-style: normal;
                         font-weight: 900;
@@ -191,13 +196,11 @@
     }
     .cont_ilustracion_error{
         border-top: #000 solid 1px;
+        border-bottom: #000 solid 1px;
         display: flex;
         justify-content: center;
         align-items: center;
-        padding-top: 10vh;
-        margin-bottom: 10vh;
-        margin-left: 1em;
-        margin-right: 1em;
+padding: 1em 1em 10vh 10vh;
     }
 
 }
