add mod ui  proyectos

--- a/sass/_proyecto.scss
+++ b/sass/_proyecto.scss
@@ -1,13 +1,15 @@
 .body_proyecto {
 
     .cont_inicios {
-        margin-left: 1em;
-        margin-right: 1em;
+        padding-left: 1em;
+        padding-right: 1em;
 
         height: 90vh;
         display: flex;
         align-items: center;
         justify-content: start;
+        border-bottom:  solid 1px black;
+
 
         .colum_unos {
             display: flex;
@@ -73,29 +75,32 @@
     }
 
     .cont_banner {
-        height: 95vh;
+        height: 100vh;
         background: #111111;
         display: flex;
         align-items: center;
         justify-content: center;
         overflow: hidden;
+        border-bottom: #000 solid 1px ;
+
 
         .video_pro_jannier {
             width: 100vw;
+            
         }
     }
 
     .cont_acercadelproyecto {
         display: flex;
         flex-direction: column;
-        margin-left: 5em;
-        margin-right: 5em;
-        height: 100vh;
+        margin-left: 1em;
+        margin-right: 1em;
+        height: 50vh;
         padding-top: 5em;
 
         h3 {
             flex-grow: 0;
-            font-family: Margo + Beuys;
+            font-family: monabold;
             font-size: 50px;
             font-weight: 900;
             text-align: left;
@@ -151,14 +156,14 @@
     .cont_paletadecolores {
         display: flex;
         flex-direction: column;
-        margin-left: 5em;
-        margin-right: 5em;
+        margin-left: 1em;
+        margin-right: 1em;
         height: 100vh;
         padding-top: 5em;
 
         h3 {
             flex-grow: 0;
-            font-family: Margo + Beuys;
+            font-family: monabold;
             font-size: 50px;
             font-weight: 900;
             text-align: left;
@@ -342,8 +347,8 @@
         flex-direction: column;
         justify-content: start;
         align-items: start;
-        margin-left: 5em;
-        margin-right: 5em;
+        margin-left: 1em;
+        margin-right: 1em;
         height: 100%;
         padding-top: 5em;
         padding-bottom: 2em;
@@ -351,7 +356,7 @@
 
         h3 {
             flex-grow: 0;
-            font-family: Margo + Beuys;
+            font-family:monabold;
             font-size: 50px;
             font-weight: 900;
             text-align: left;
