add ajustes respondives a platilla proyectos y portafolioes

--- a/style/sass.css
+++ b/style/sass.css
@@ -1545,7 +1545,6 @@ p {
     display: flex;
     height: 88vh;
     flex-direction: column-reverse;
-    margin: 1em 1em 1em 1em;
     gap: 0em;
     align-items: center;
     justify-content: start;
@@ -1558,8 +1557,10 @@ p {
     justify-content: space-evenly;
   }
   .body_plantilla .cont_inicio .colum_uno .titulo {
+    margin-left: 0.8em;
+    margin-right: 0.8em;
     color: #000;
-    font-family: MargoBeuys;
+    font-family: monabold;
     font-size: calc(1px + 8vw);
     font-style: normal;
     font-weight: 900;
@@ -1569,7 +1570,7 @@ p {
   }
   .body_plantilla .cont_inicio .colum_uno .parrafo {
     color: #000;
-    font-family: poppins;
+    font-family: monamedium;
     font-size: 15px;
     font-style: normal;
     font-weight: 300;
@@ -1577,30 +1578,9 @@ p {
     /* 20.4px */
     text-transform: capitalize;
     padding-bottom: 2em;
-    border-bottom: 1px solid #414141;
-  }
-  .body_plantilla .cont_inicio .colum_uno .stikerlvl {
-    transform: scale(0.8);
-    rotate: 20deg;
-    position: absolute;
-    top: -4em;
-    right: 1em;
-  }
-  .body_plantilla .cont_inicio .colum_uno .stikerlvl p {
-    text-align: center;
-    position: absolute;
-    top: 40px;
-    left: 21px;
-    color: #ffffff;
-    font-family: MargoBeuys;
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 900;
-    line-height: 136%;
-    /* 20.4px */
-    text-transform: capitalize;
   }
   .body_plantilla .cont_inicio .columdos {
+    transform: rotate(90deg);
     width: 100%;
     height: 50%;
   }
@@ -1644,7 +1624,7 @@ p {
     align-items: start;
     flex-shrink: 0;
     overflow: hidden;
-    background: #ffffff;
+    background: #f32400;
   }
   .body_plantilla .cont_cinta_plantilla .slider_inicio .slide-track {
     width: 100%;
@@ -1665,9 +1645,9 @@ p {
   .body_plantilla .cont_cinta_plantilla .slider_inicio .slide-track .slide p {
     padding-top: 10px;
     padding-bottom: 10px;
-    color: #000;
+    color: #ffffff;
     text-align: center;
-    font-family: MargoBeuys;
+    font-family: monasemibold;
     font-size: 15px;
     font-style: normal;
     font-weight: 300;
@@ -1675,19 +1655,16 @@ p {
     white-space: nowrap;
   }
   .body_plantilla .cont_grilla_proyectos {
-    margin: 1em 1em 5em 1em;
+    padding: 1em 1em 5em 1em;
   }
   .body_plantilla .cont_ilustracion_error {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 10vh;
-    margin-bottom: 10vh;
-    margin-left: 1em;
-    margin-right: 1em;
+    padding: 3em 0em 3em 0em;
   }
   .body_plantilla .cont_ilustracion_error img {
-    width: 80vw;
+    width: 100%;
   }
 }
 @keyframes scroll101 {
@@ -2187,7 +2164,7 @@ p {
     flex-direction: column;
     margin-left: 1em;
     margin-right: 1em;
-    height: 100vh;
+    height: auto;
     padding-top: 5em;
   }
   .body_proyecto .cont_acercadelproyecto h3 {
@@ -2487,7 +2464,7 @@ p {
     display: flex;
     flex-direction: column;
     margin-top: 10em;
-    margin-bottom: 10em;
+    padding-bottom: 10em;
     gap: 1em;
   }
   .body_proyecto .cont_img .cont_img_grup {
