--- a/sass/_plantillaproyectos.scss
+++ b/sass/_plantillaproyectos.scss
@@ -214,7 +214,6 @@
             display: flex;
             height: 88vh;
             flex-direction: column-reverse;
-            margin: 1em 1em 1em 1em;
             gap: 0em;
             align-items: center;
             justify-content: start;
@@ -228,8 +227,10 @@
 
 
                 .titulo {
+                    margin-left: 0.8em;
+                    margin-right: 0.8em;
                     color: #000;
-                    font-family: Margo + Beuys;
+                    font-family: monabold;
                     font-size: calc(1px + 8vw);
                     font-style: normal;
                     font-weight: 900;
@@ -240,7 +241,7 @@
 
                 .parrafo {
                     color: #000;
-                    font-family: poppins;
+                    font-family: monamedium;
                     font-size: 15px;
                     font-style: normal;
                     font-weight: 300;
@@ -248,39 +249,11 @@
                     /* 20.4px */
                     text-transform: capitalize;
                     padding-bottom: 2em;
-                    border-bottom: 1px solid #414141;
-                }
-
-                .contadores {}
-
-                .stikerlvl {
-                    transform: scale(0.8);
-                    rotate: 20deg;
-                    position: absolute;
-                    top: -4em;
-                    right: 1em;
-
-                    img {}
-
-                    p {
-                        text-align: center;
-                        position: absolute;
-                        top: 40px;
-                        left: 21px;
-                        color: #ffffff;
-                        font-family: Margo + Beuys;
-                        font-size: 15px;
-                        font-style: normal;
-                        font-weight: 900;
-                        line-height: 136%;
-                        /* 20.4px */
-                        text-transform: capitalize;
-
-                    }
                 }
             }
 
             .columdos {
+                transform: rotate(90deg);
                 width: 100%;
                 height: 50%;
             }
@@ -320,6 +293,7 @@
             width: 100%;
             height: 50px;
             overflow-x: hidden;
+            
 
             .slider_inicio {
                 width: 100%;
@@ -329,7 +303,7 @@
                 align-items: start;
                 flex-shrink: 0;
                 overflow: hidden;
-                background: #ffffff;
+                background: #f32400;
 
                 .slide-track {
                     width: 100%;
@@ -351,9 +325,9 @@
                         p {
                             padding-top: 10px;
                             padding-bottom: 10px;
-                            color: #000;
+                            color: #ffffff;
                             text-align: center;
-                            font-family: MargoBeuys;
+                            font-family: monasemibold;
                             font-size: 15px;
                             font-style: normal;
                             font-weight: 300;
@@ -366,18 +340,16 @@
         }
 
         .cont_grilla_proyectos {
-            margin: 1em 1em 5em 1em;
+            padding: 1em 1em 5em 1em;
         }
         .cont_ilustracion_error{
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-top: 10vh;
-            margin-bottom: 10vh;
-            margin-left: 1em;
-            margin-right: 1em;
+            padding: 3em 0em 3em 0em;
+
             img{
-                width: 80vw;
+                width: 100%;
             }
         }
     }
