--- a/sass/_proyecto.scss
+++ b/sass/_proyecto.scss
@@ -554,7 +554,7 @@
             flex-direction: column;
             margin-left: 1em;
             margin-right: 1em;
-            height: 100vh;
+            height: auto;
             padding-top: 5em;
 
             h3 {
@@ -885,7 +885,7 @@
             display: flex;
             flex-direction: column;
             margin-top: 10em;
-            margin-bottom: 10em;
+            padding-bottom: 10em;
             gap: 1em;
     
             .cont_img_grup {
